Bugfix: desktop view, card icons not visible when only 1 player

--- a/webui/src/components/TableTopGame.module.scss
+++ b/webui/src/components/TableTopGame.module.scss
@@ -8,7 +8,7 @@
     display: flex;
     flex-wrap: wrap;
     margin: auto;
-    max-width: 1000px;
+    width: 760px;
     align-content: flex-start;
     align-items: flex-start;
   }
